Fix bugs of store.
